# ba_ceres_demo_self_jacobian

./: .gitignore  CMakeLists.txt  README.md
srcBA/: ba_structs.cpp  ba_structs.h  main_my_jacobian.cpp
srcCeres/: main_ceres_autodiff.cpp
utils/: baproblem.h  utils.cpp  utils.h
